--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="ok">OK</string>
     <string name="logout">Logout</string>
     <string name="refresh">Refresh</string>
+    <string name="battery">Battery</string>
 </resources>
