--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,13 @@
     <string name="time_configuration">Time Configuration</string>
     <string name="time_col">:</string>
     <string name="_00">00</string>
+    <string name="manual_control">Manual Control</string>
+    <string name="up">up</string>
+    <string name="down">down</string>
+    <string name="turn_right">Turn Right</string>
+    <string name="turn_left">Turn Left</string>
+    <string name="pitch_down">pitch down</string>
+    <string name="pitch_up">Pitch up</string>
     <string-array name="OPEN_CLOSE">
         <item>OPEN</item>
         <item>CLOSE</item>
